--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ main{
   width: 200px;
   transition: all 0.2s linear;
   padding: 5px;
-  background-color: black;
+  background-color: orange;
 }
 .the_card:hover{
   transform: scale(1.1);
