--- a/style2.css
+++ b/style2.css
@@ -161,7 +161,7 @@ header{
   display: block;
   height: 20px;
   padding: 10px 0px;
-  background-color: black;
+  background-color: pink;
   color: white;
   font-family: "Segoe UI";
   font-size: 15px;
