--- a/about.css
+++ b/about.css
@@ -31,7 +31,7 @@
 }
 
 .banner-section-bg-container {
-    background-image: url("https://tse2.mm.bing.net/th?id=OIP.yvN5tNGWzxYEiqiUffVwKwHaBe&pid=Api&P=0&w=495&h=99");
+    background-image: url("");
 
     height: 30vh;
 
