--- a/style.css
+++ b/style.css
@@ -39,11 +39,11 @@ main{
 
 .the_card{
   margin: 10px;
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  width: 100px;
   transition: all 0.2s linear;
   padding: 5px;
-  background-color: orange;
+  background-color: lightpink;
 }
 .the_card:hover{
   transform: scale(1.1);
@@ -59,7 +59,7 @@ main{
   display: block;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: lightblue;
   color: black;
   text-align: center;
   text-decoration: none;
