--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@ main{
 }
 .card_content{
   display: block;
-  width: 100%;
-  height: 20%;
+  width: ;
+  height: ;
   background-color: lightblue;
   color: black;
   text-align: center;
